# qgit5

./: .gitignore  CMakeLists.txt  README.md  README_WIN.txt  qgit.pro  qgit5.sln  qgit5.vcxproj  qgit5.vcxproj.filters  qgit_inno_setup.iss
cmake/: NSIS.template.in  WinDeployQt.cmake
src/: FileHistory.cc  FileHistory.h  annotate.cpp  annotate.h  cache.cpp  cache.h  commitimpl.cpp  commitimpl.h  common.cpp  common.h  consoleimpl.cpp  consoleimpl.h  customactionimpl.cpp  customactionimpl.h  dataloader.cpp  dataloader.h  domain.cpp  domain.h  exceptionmanager.cpp  exceptionmanager.h  filecontent.cpp  filecontent.h  filelist.cpp  filelist.h  fileview.cpp  fileview.h  git.cpp  git.h  lanes.cpp  lanes.h  listview.cpp  listview.h  mainimpl.cpp  mainimpl.h  myprocess.cpp  myprocess.h  namespace_def.cpp  patchcontent.cpp  patchcontent.h  patchview.cpp  (+15 more)
